--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "purescript-aff-promise": "^1.0.0",
+    "purescript-aff-promise": "justinwoo/purescript-aff-promise#compiler/0.12",
     "purescript-aff": "^5.0.0"
   },
   "repository": {
